Implement code improvements from Java 21.